examples/1.2.0/fail/nonunique-contributors/CITATION.cff
cff-version: 1.2.0
authors:
- name: The team
contributors:
- alias: jspaaks
- alias: jspaaks
message: The message
title: The title
